[gd_scene load_steps=2 format=3 uid="uid://ciuvi7tl2l5wv"]

[ext_resource type="Script" uid="uid://devlsdpi63sk1" path="res://pause_menu.gd" id="1_jvnd5"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvnd5")

[node name="ResumeButton" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 477.0
offset_top = 243.0
offset_right = 592.0
offset_bottom = 274.0
text = "Resume"

[node name="RestartButton" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 478.0
offset_top = 279.0
offset_right = 593.0
offset_bottom = 310.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 479.0
offset_top = 315.0
offset_right = 594.0
offset_bottom = 347.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 479.0
offset_top = 351.0
offset_right = 594.0
offset_bottom = 383.0
text = "Quit Game"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
